[package]
name = "glicol-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.1"
env_logger = "0.10.0"
log = "0.4.20"
rayon = "1.7.0"
ropey = "1.6.0"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tower-lsp = "0.20.0"
tree-sitter = "0.20.10"
tree-sitter-glicol = { git = "https://github.com/TenStrings/tree-sitter-glicol" }
walkdir = "2.3.3"
glicol = { path = "glicol/rs/main" }
pest = "2.7.3"
tree-sitter-highlight = "0.20.1"
serde = { version = "1.0.188", features = ["derive"] }
once_cell = "1.18.0"

[build-dependencies]
cc = "1.0.83"
